safari issue for alignment of input solved.

--- a/src/assets/scss/home/_home.scss
+++ b/src/assets/scss/home/_home.scss
@@ -67,20 +67,19 @@
 }
 
 .search-wrapper {
-	width: 100%;
-	padding: 2rem 2rem 1rem;
+	margin: 2rem 2rem 1rem;
 	position: relative;
-	// background-color: $white;
 	input {
 		border-radius: 2rem;
 		padding: 1.5rem 3rem 1.5rem 6rem;
 		outline: none;
 		box-shadow: none;
-		// background-color: $background-color;
+		margin: 0;
 		border: none;
 		width: 100%;
 		font-size: 1.8rem;
 		box-shadow: 0 15px 20px #e6e8f2;
+		font-family: "OpenSans-Regular", Arial, Helvetica, sans-serif;
 		&::placeholder {
 			@include font(#6e6e6e, "OpenSans-Regular", 1.8rem, 400);
 		}
